# smp_protocol

./: AGENTS.md  BUILD_CONVENTION.md  CMakeLists.txt  LICENSE  README.md
docs/plans/: 2026-03-03-designated-initializers.md  2026-03-03-smp-mcuboot-design.md  2026-03-03-smp-mcuboot-implementation.md  2026-03-03-smp-mcumgr-compat-design.md  2026-03-03-smp-mcumgr-compat-implementation.md
examples/: complete_upload_demo.c  error_scenarios_demo.c  integration_target.c  integration_target.h  minimal_target.c
include/smp/: smp.h  smp_base64.h  smp_types.h
src/: smp_base64.c  smp_cbor_adapter.c  smp_cbor_adapter.h  smp_cmd_img_upload.c  smp_core.c  smp_dispatch.c  smp_internal.h
tests/: CMakeLists.txt  test_base64.c  test_main.c  test_support.c  test_support.h
